2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Tasks/TaskService.cs: made informjumptotask
	  internal.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Tasks/Task.cs:
	* MonoDevelop.Ide.Tasks/TaskStore.cs:
	* MonoDevelop.Ide.Tasks/TaskService.cs: Added event to the
	  task service that informs of a jump to task command.

2010-05-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Fix
	  shift-tab brokenness.

2010-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* icons/SplashScreen.png: Updated.

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: Hide
	  the dialog separator. Not needed.

2010-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* BuildVariables.cs: Updated.

2010-05-19  Michael Hutchinson  <mhutchinson@novell.com>

	* options/KeyBindingSchemeEmacs.xml: Fix keybindings.

2010-05-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: Fix keybindings.

2010-05-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Better
	  handling of mapping raw keys to commands. We now use the
	  keymap to consume shift keys when possible, except for
	  letters. This means commands should remain sane across
	  different keyboards, and will always be stored and displayed
	  concisely.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/TooltipWindow.cs: Try to fix
	  criticals.

2010-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components/GtkUtil.cs: Hide the tooltip when the
	  tree is hidden. Made the code more robust. Fixes bug #606191
	  - Null reference "Unhandled Exception" caused by auto-hide
	  panel hiding while tooltip shows.

2010-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Set the
	  active location list every time a search is started.
