@@ -155,7 +155,7 @@ namespace MonoDevelop.Ide.Commands
 		protected override void Update (CommandInfo info)
 		{
 			object focus = IdeApp.Workbench.RootWindow.HasToplevelFocus ? IdeApp.Workbench.RootWindow.Focus : null;
-			info.Enabled = (focus is Gtk.Editable || focus is Gtk.TextView); 
+			info.Bypass = !(focus is Gtk.Editable || focus is Gtk.TextView); 
 		}
 	}	
 	
@@ -186,7 +186,7 @@ namespace MonoDevelop.Ide.Commands
 			else if (focus is Gtk.TextView)
 				info.Enabled =  ((Gtk.TextView)focus).Editable;
 			else
-				info.Enabled = false;
+				info.Bypass = true;
 		}
 	}
 	
@@ -215,9 +215,9 @@ namespace MonoDevelop.Ide.Commands
 			if (focus is Gtk.Editable)
 				info.Enabled = ((Gtk.Editable)focus).IsEditable;
 			else if (focus is Gtk.TextView)
-				info.Enabled =  ((Gtk.TextView)focus).Editable;
+				info.Enabled = ((Gtk.TextView)focus).Editable;
 			else
-				info.Enabled = false;
+				info.Bypass = true;
 		}
 	}
 	
